Edited Linux built script to also create .tar.gz versions